// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Topbar - props logout renders logout link and adds topbar-link-right to the logout 1`] = `
<header
  className="topbar"
>
  

  <a
    aria-label="To homepage"
    className="topbar-logo"
    href="/"
    onClick={[Function]}
  >
    

    <img
      alt="TESTBRAND logo"
      className="logotype-vertical logotype-sm"
      src="/TEST/img/logo/TESTBRAND-logo.svg"
    />
    

  </a>
  

  <a
    className="topbar-link-right"
    href="#"
    onClick={[Function]}
  >
    

    <i
      className="material-icons"
    >
      exit_to_app
    </i>
    

    <span>
      Log out
    </span>
    

  </a>
  

</header>
`;

exports[`Component: Topbar - props topbarContent renders a sidebar in topbar-link-container when sidebar prop is true 1`] = `
<header
  className="topbar"
>
  

  <div
    className="nav-container"
  >
    

    <button
      aria-controls="topbar-nav"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Open menu"
      className="topbar-btn"
      type="button"
    >
      
		
      <i
        className="material-icons topbar-btn-icon"
      >
        menu
      </i>
      
		
    </button>
    <button
      aria-label="Close menu"
      className="topbar-close"
      type="button"
    >
      

      <i
        className="material-icons topbar-btn-icon"
      >
        close
      </i>
      
		
    </button>
    

    <a
      aria-label="To homepage"
      className="topbar-logo"
      href="/"
      onClick={[Function]}
    >
      

      <img
        alt="TESTBRAND logo"
        className="logotype-vertical logotype-sm"
        src="/TEST/img/logo/TESTBRAND-logo.svg"
      />
      

    </a>
    

    

    <nav
      className="topbar-nav"
    >
      <div
        className="topbar-link-container"
      >
        

        <a
          className="active"
          href="#"
          onClick={[Function]}
        >
          

          <i
            className="material-icons"
          >
            home
          </i>
          

          

          <span>
            Home
          </span>
        </a>
        <div
          className="sidebar"
          id="topbar-sidebar"
        >
          <nav
            className="sidebar-main-nav"
          >
            <div
              className="sidebar-logo"
            >
              

              <a
                aria-label="To homepage"
                href="/"
              >
                

                <img
                  alt="TESTBRAND vertical logo"
                  className="logotype-vertical logotype-md"
                  src="/TEST/img/logo/TESTBRAND-logo-v.svg"
                />
                

              </a>
            </div>
            <ul
              className="main-nav-ul"
            >
              <li
                className="main-nav-li active"
              >
                

                <a
                  href="#"
                  onClick={[Function]}
                >
                  

                  <i
                    aria-hidden="true"
                    className="material-icons-outlined"
                  >
                    home
                  </i>
                  

                  Home Page
                  

                </a>
              </li>
              <li
                className="main-nav-li"
              >
                

                <a
                  href="#"
                  onClick={[Function]}
                >
                  

                  <i
                    aria-hidden="true"
                    className="material-icons-outlined rotated"
                  >
                    wb_incandescent
                  </i>
                  

                  Get Started
                  

                </a>
                <nav
                  className="sidebar-secondary-nav"
                >
                  <header
                    className="secondary-nav-header"
                  >
                    Get Started
                  </header>
                  <ul
                    className="secondary-nav-ul"
                  >
                    <li
                      className="secondary-nav-li leaf"
                    >
                      

                      <a
                        href="#"
                        onClick={[Function]}
                      >
                        <i
                          aria-hidden="true"
                          className="material-icons-outlined rotated"
                        >
                          accessibility
                        </i>
                        Accessibility
                      </a>
                    </li>
                    <li
                      className="secondary-nav-li group"
                    >
                      

                      <a
                        href="#"
                        onClick={[Function]}
                      >
                        <i
                          aria-hidden="true"
                          className="material-icons-outlined rotated"
                        >
                          palette
                        </i>
                        Colors
                      </a>
                      <ul
                        aria-expanded={true}
                      >
                        

                        <li
                          className="nav-leaf"
                        >
                          

                          <a
                            href="#"
                            onClick={[Function]}
                          >
                            Primary colors
                          </a>
                        </li>
                        <li
                          className="nav-leaf"
                        >
                          

                          <a
                            href="#"
                            onClick={[Function]}
                          >
                            Secondary colors
                          </a>
                        </li>
                        <li
                          className="nav-leaf"
                        >
                          

                          <a
                            href="#"
                            onClick={[Function]}
                          >
                            Tertiary colors
                          </a>
                        </li>
                      </ul>
                    </li>
                    <li
                      className="secondary-nav-li leaf"
                    >
                      

                      <a
                        href="#"
                        onClick={[Function]}
                      >
                        <i
                          aria-hidden="true"
                          className="material-icons-outlined rotated"
                        >
                          grid_on
                        </i>
                        Grid
                      </a>
                    </li>
                    <li
                      className="secondary-nav-li leaf"
                    >
                      

                      <a
                        href="#"
                        onClick={[Function]}
                      >
                        <i
                          aria-hidden="true"
                          className="material-icons-outlined rotated"
                        >
                          space_bar
                        </i>
                        Spacing
                      </a>
                    </li>
                  </ul>
                </nav>
              </li>
              <li
                className="main-nav-li"
              >
                

                <a
                  href="#"
                  onClick={[Function]}
                >
                  

                  <i
                    aria-hidden="true"
                    className="material-icons-outlined"
                  >
                    palette
                  </i>
                  

                  Identity
                  

                </a>
                <nav
                  className="sidebar-secondary-nav"
                >
                  <header
                    className="secondary-nav-header"
                  >
                    Identity
                  </header>
                  <ul
                    className="secondary-nav-ul"
                  >
                    <li
                      className="secondary-nav-li leaf"
                    >
                      

                      <a
                        href="#"
                        onClick={[Function]}
                      >
                        Introduction
                      </a>
                    </li>
                    <li
                      className="secondary-nav-li group"
                    >
                      

                      <a
                        href="#"
                        onClick={[Function]}
                      >
                        Events
                      </a>
                      <ul
                        aria-expanded={true}
                      >
                        

                        <li
                          className="nav-leaf"
                        >
                          

                          <a
                            href="#"
                            onClick={[Function]}
                          >
                            Event 1
                          </a>
                        </li>
                        <li
                          className="nav-leaf"
                        >
                          

                          <a
                            href="#"
                            onClick={[Function]}
                          >
                            Event 2
                          </a>
                        </li>
                        <li
                          className="nav-leaf"
                        >
                          

                          <a
                            href="#"
                            onClick={[Function]}
                          >
                            Event 3
                          </a>
                        </li>
                      </ul>
                    </li>
                    <li
                      className="secondary-nav-li leaf"
                    >
                      

                      <a
                        href="#"
                        onClick={[Function]}
                      >
                        Conclusion
                      </a>
                    </li>
                  </ul>
                </nav>
              </li>
            </ul>
          </nav>
        </div>
        

        <a
          className=""
          href="#"
          onClick={[Function]}
        >
          

          <i
            className="material-icons"
          >
            shopping_cart
          </i>
          

          

          <span>
            Purchase history
          </span>
        </a>
        

        <a
          className=""
          href="#"
          onClick={[Function]}
        >
          

          <i
            className="material-icons"
          >
            settings
          </i>
          

          

          <span>
            Settings
          </span>
        </a>
        

        

      </div>
    </nav>
  </div>
</header>
`;

exports[`Component: Topbar - props topbarContent renders a topbar menu without menu icons 1`] = `
<header
  className="topbar"
>
  

  <div
    className="nav-container"
  >
    

    <button
      aria-controls="topbar-nav"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Open menu"
      className="topbar-btn"
      type="button"
    >
      
		
      <i
        className="material-icons topbar-btn-icon"
      >
        menu
      </i>
      
		
    </button>
    <button
      aria-label="Close menu"
      className="topbar-close"
      type="button"
    >
      

      <i
        className="material-icons topbar-btn-icon"
      >
        close
      </i>
      
		
    </button>
    

    <a
      aria-label="To homepage"
      className="topbar-logo"
      href="/"
      onClick={[Function]}
    >
      

      <img
        alt="TESTBRAND logo"
        className="logotype-vertical logotype-sm"
        src="/TEST/img/logo/TESTBRAND-logo.svg"
      />
      

    </a>
    

    

    <nav
      className="topbar-nav"
    >
      <div
        className="topbar-link-container"
      >
        

        <a
          className="active"
          href="#"
          onClick={[Function]}
        >
          

          

          <span>
            Home
          </span>
        </a>
        

        <a
          className=""
          href="#"
          onClick={[Function]}
        >
          

          

          <span>
            Purchase history
          </span>
        </a>
        

        <a
          className=""
          href="#"
          onClick={[Function]}
        >
          

          

          <span>
            Settings
          </span>
        </a>
        

        

      </div>
    </nav>
  </div>
</header>
`;

exports[`Component: Topbar - props topbarContent renders a topbar menuopen and close buttons when content is provided 1`] = `
<header
  className="topbar"
>
  

  <div
    className="nav-container"
  >
    

    <button
      aria-controls="topbar-nav"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Open menu"
      className="topbar-btn"
      type="button"
    >
      
		
      <i
        className="material-icons topbar-btn-icon"
      >
        menu
      </i>
      
		
    </button>
    <button
      aria-label="Close menu"
      className="topbar-close"
      type="button"
    >
      

      <i
        className="material-icons topbar-btn-icon"
      >
        close
      </i>
      
		
    </button>
    

    <a
      aria-label="To homepage"
      className="topbar-logo"
      href="/"
      onClick={[Function]}
    >
      

      <img
        alt="TESTBRAND logo"
        className="logotype-vertical logotype-sm"
        src="/TEST/img/logo/TESTBRAND-logo.svg"
      />
      

    </a>
    

    

    <nav
      className="topbar-nav"
    >
      <div
        className="topbar-link-container"
      >
        

        <a
          className="active"
          href="#"
          onClick={[Function]}
        >
          

          <i
            className="material-icons"
          >
            home
          </i>
          

          

          <span>
            Home
          </span>
        </a>
        

        <a
          className=""
          href="#"
          onClick={[Function]}
        >
          

          <i
            className="material-icons"
          >
            shopping_cart
          </i>
          

          

          <span>
            Purchase history
          </span>
        </a>
        

        <a
          className=""
          href="#"
          onClick={[Function]}
        >
          

          <i
            className="material-icons"
          >
            settings
          </i>
          

          

          <span>
            Settings
          </span>
        </a>
        

        

      </div>
    </nav>
  </div>
</header>
`;

exports[`Component: Topbar - props topbarContent renders topbar-link-container and a logout link 1`] = `
<header
  className="topbar"
>
  

  <div
    className="nav-container"
  >
    

    <button
      aria-controls="topbar-nav"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Open menu"
      className="topbar-btn"
      type="button"
    >
      
		
      <i
        className="material-icons topbar-btn-icon"
      >
        menu
      </i>
      
		
    </button>
    <button
      aria-label="Close menu"
      className="topbar-close"
      type="button"
    >
      

      <i
        className="material-icons topbar-btn-icon"
      >
        close
      </i>
      
		
    </button>
    

    <a
      aria-label="To homepage"
      className="topbar-logo"
      href="/"
      onClick={[Function]}
    >
      

      <img
        alt="TESTBRAND logo"
        className="logotype-vertical logotype-sm"
        src="/TEST/img/logo/TESTBRAND-logo.svg"
      />
      

    </a>
    

    

    <nav
      className="topbar-nav"
    >
      <div
        className="topbar-link-container"
      >
        

        <a
          className="active"
          href="#"
          onClick={[Function]}
        >
          

          <i
            className="material-icons"
          >
            home
          </i>
          

          

          <span>
            Home
          </span>
        </a>
        

        <a
          className=""
          href="#"
          onClick={[Function]}
        >
          

          <i
            className="material-icons"
          >
            shopping_cart
          </i>
          

          

          <span>
            Purchase history
          </span>
        </a>
        

        <a
          className=""
          href="#"
          onClick={[Function]}
        >
          

          <i
            className="material-icons"
          >
            settings
          </i>
          

          

          <span>
            Settings
          </span>
        </a>
        

        <a
          className="topbar-link-right"
          href="#"
          onClick={[Function]}
        >
          

          <i
            className="material-icons"
          >
            exit_to_app
          </i>
          

          <span>
            Log out
          </span>
          

        </a>
        

        

      </div>
    </nav>
  </div>
</header>
`;

exports[`Component: Topbar - props topbarContent renders topbar-link-container and populates it with given information without a logout link 1`] = `
<header
  className="topbar"
>
  

  <div
    className="nav-container"
  >
    

    <button
      aria-controls="topbar-nav"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Open menu"
      className="topbar-btn"
      type="button"
    >
      
		
      <i
        className="material-icons topbar-btn-icon"
      >
        menu
      </i>
      
		
    </button>
    <button
      aria-label="Close menu"
      className="topbar-close"
      type="button"
    >
      

      <i
        className="material-icons topbar-btn-icon"
      >
        close
      </i>
      
		
    </button>
    

    <a
      aria-label="To homepage"
      className="topbar-logo"
      href="/"
      onClick={[Function]}
    >
      

      <img
        alt="TESTBRAND logo"
        className="logotype-vertical logotype-sm"
        src="/TEST/img/logo/TESTBRAND-logo.svg"
      />
      

    </a>
    

    

    <nav
      className="topbar-nav"
    >
      <div
        className="topbar-link-container"
      >
        

        <a
          className="active"
          href="#"
          onClick={[Function]}
        >
          

          <i
            className="material-icons"
          >
            home
          </i>
          

          

          <span>
            Home
          </span>
        </a>
        

        <a
          className=""
          href="#"
          onClick={[Function]}
        >
          

          <i
            className="material-icons"
          >
            shopping_cart
          </i>
          

          

          <span>
            Purchase history
          </span>
        </a>
        

        <a
          className=""
          href="#"
          onClick={[Function]}
        >
          

          <i
            className="material-icons"
          >
            settings
          </i>
          

          

          <span>
            Settings
          </span>
        </a>
        

        

      </div>
    </nav>
  </div>
</header>
`;

exports[`Component: Topbar - props wide renders a topbar with the given breakpoint 1`] = `
<header
  className="topbar topbar-lg-wide"
>
  

  <a
    aria-label="To homepage"
    className="topbar-logo"
    href="/"
    onClick={[Function]}
  >
    

    <img
      alt="TESTBRAND logo"
      className="logotype-vertical logotype-sm"
      src="/TEST/img/logo/TESTBRAND-logo.svg"
    />
    

  </a>
  

</header>
`;

exports[`Component: Topbar - renders a topbar with only a clickable logo 1`] = `
<header
  className="topbar"
>
  

  <a
    aria-label="To homepage"
    className="topbar-logo"
    href="/"
    onClick={[Function]}
  >
    

    <img
      alt="TESTBRAND logo"
      className="logotype-vertical logotype-sm"
      src="/TEST/img/logo/TESTBRAND-logo.svg"
    />
    

  </a>
  

</header>
`;
